Corrected white space above large image, center content inside body.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+html {
+  width: 1080px;
+  margin: auto;
+}
+
 body {
-  width: 960px;
+  width: 1080px;
+  /* display: flex; */
+  margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   color: black;
 }
@@ -9,7 +16,7 @@ header {
 }
 
 nav {
-  width: 100%;
+  width: 1080px;
   background-color: #555;
   color: white;
 }
@@ -36,9 +43,17 @@ nav li {
   margin-bottom: 0px;
 }
 
-main > img {
-  margin-bottom: 0px;
+main {
+  align-content: center;
+  padding-left: 60px;
+  padding-right: 60px
 }
+
+ #largePlaceholder {
+  padding-top: 20px;
+  margin-top: 10px;
+}
+
 
 main ul {
   padding: 0px;
